--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
   b = branch --show-current
   xx = clean -dxf
   st = status --ignore-submodules=dirty
-  ci = commit
+  ci = commit -v
   di = !sh -c 'git diff -b --ignore-submodules=dirty'
   review = !sh -c 'git diff -b $(git merge-base $(git rev-parse --abbrev-ref HEAD) $0)'
   rb = !sh -c 'git diff -b $0...$1 | delta --side-by-side'
@@ -40,26 +40,15 @@
   changed = green
   untracked = cyan
 
-[diff]
-  tool = difftastic
-  external = difft
-
 [difftool]
   prompt = false
 
-[difftool "difftastic"]
-  cmd = difft "$LOCAL" "$REMOTE"
-
 [push]
   default = simple
-[filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-  required = true
-	process = git-lfs filter-process
+
 [core]
-  editor = emacs
+  editor = "emacs -nw"
   hooksPath = /Users/andreas/build/bin
 
 [github]
-  user = anha0825
+  user = andreashasse
