--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -7,26 +7,40 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
-  "assistant": {
-    "default_model": {
-      "provider": "copilot_chat",
-      "model": "gpt-4o"
-    },
-    "version": "2"
+  "tab_bar": {
+    "show": true
   },
-
-  "ui_font_size": 12,
-  "buffer_font_size": 12,
+  "edit_predictions": {
+    "mode": "subtle",
+    "copilot": {
+      "proxy": null,
+      "proxy_no_verify": null,
+      "enterprise_uri": null
+    },
+    "enabled_in_text_threads": false
+  },
+  "features": {
+    "edit_prediction_provider": "copilot"
+  },
+  "vim_mode": true,
+  "agent": {
+    "default_model": {
+      "provider": "zed.dev",
+      "model": "claude-sonnet-4"
+    },
+  },
+  "ui_font_size": 13,
+  "buffer_font_size": 13,
   "theme": {
     "mode": "system",
-    "light": "Solarized Dark",
+    "light": "Gruvbox Dark Hard",
     "dark": "One Dark"
   },
   "buffer_font_features": {
     // Disable ligatures:
     "calt": false
   },
-  "buffer_font_family": "Monaco",
+  "buffer_font_family": "FiraCode Nerd Font Mono",
   "git": {
     "inline_blame": {
       "enabled": false
@@ -36,5 +50,18 @@
     // Show git status colors in the editor tabs.
     "git_status": true
   },
-  "autosave": "on_focus_change"
+  "formatter": "language_server",
+  "autosave": "on_focus_change",
+  "languages": {
+    "Erlang": {
+      "language_servers": [
+        "elp",
+        "!erlang-ls"
+      ]
+    }
+  },
+  "indent_guides": {
+    "enabled": true,
+    "coloring": "indent_aware"
+  }
 }
